--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
     "name": "vior-cli",
     "type": "module",
-    "version": "0.2.4",
+    "version": "0.2.5",
     "description": "A simple CLI for Vior.",
-    "main": "src/index.js",
+    "main": "",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1"
     },
