--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "vior-cli",
     "type": "module",
-    "version": "0.3.2",
+    "version": "0.3.3",
     "description": "A simple CLI for Vior.",
     "main": "",
     "scripts": {
@@ -10,22 +10,28 @@
     "bin": {
         "vior": "bin/vior.js",
         "vior-init": "bin/vior-init.js",
-        "vior-complile": "bin/vior-complile.js"
+        "vior-complile": "bin/vior-complile.js",
+        "vior-hotupdate": "bin/vior-hotupdate.js"
     },
     "dependencies": {
-        "vior": "^0.4.0",
-        "inquirer": "^4.0.0",
-        "ora": "^1.3.0",
-        "rimraf": "^2.6.2",
         "chalk": "^2.3.0",
         "commander": "^2.11.0",
-        "download-git-repo": "^1.0.1"
+        "download-git-repo": "^1.0.1",
+        "inquirer": "^4.0.0",
+        "node-watch": "^0.7.3",
+        "ora": "^1.3.0",
+        "rimraf": "^2.6.2",
+        "vior": "^0.4.0"
     },
     "repository": {
         "type": "git",
         "url": "git+https://github.com/jwhgzs/vior-cli.git"
     },
-    "keywords": ["vior", "cli", "jwhgzs"],
+    "keywords": [
+        "vior",
+        "cli",
+        "jwhgzs"
+    ],
     "author": "jwhgzs",
     "license": "MIT",
     "bugs": {
